--- a/resources/md_files/pipeline_summary.Rmd
+++ b/resources/md_files/pipeline_summary.Rmd
@@ -1,120 +1,153 @@
+---
+title: "for github"
+author: "Carter Hoffman"
+date: "_last edited `r Sys.Date()`_"
 
+header-includes:
+   - \usepackage{amsmath,amssymb}
+   - \usepackage[bitstream-charter]{mathdesign}
+   - \usepackage[T1]{fontenc}
+   
+output:
+  md_document:
+    variant: gfm
 
+---
+```{r, eval=FALSE, echo=FALSE}
+output: 
+  pdf_document:
+      toc: true
+      toc_depth: 2
+      df_print: kable
+    
+output: 
+  html_document:
+    toc: true
+    toc_depth: 4
+    toc_float: true
+    theme: readable
+    highlight: tango
 
+# knit directly to md for github
+output:
+  md_document:
+    variant: gfm
+```
 
+```{r echo=FALSE}
+knitr::opts_chunk$set(tidy = FALSE, warning = FALSE, message = FALSE, max.print = 5)
+```
 
+```{r echo=FALSE}
+# load libraries
+library(tidyverse)
+library(wesanderson)
+library(broom)
+library(viridis)
+library(ggrepel)
+library(votesys)
+```
 
 # Overview
 
-I’m using this file to generate all md files for the github readme
-pages.
+I'm using this file to generate all md files for the github readme pages.
 
 ![](sm_overall_activity.png)
 
 # Data download
 
-I searched the Silva database on 11/10/2019 for each type strain of the
-Thomas-White dataset. Search parameters were the species name, SSU r132,
-and the strain=\[T\] designation. I chose the longest sequence length
-with the highest stats. For the species that had no hits, I used the
-synonum, if
-available.
+I searched the Silva database on 11/10/2019 for each type strain of the Thomas-White dataset. Search parameters were the species name, SSU r132, and the strain=[T] designation. I chose the longest sequence length with the highest stats. For the species that had no hits, I used the synonum, if available.
 
-| species                           | type strain accession | notes                                      |
-| --------------------------------- | --------------------- | ------------------------------------------ |
-| Actinobaculum schaalii            | FJ960443              | as Actinotignum schaali                    |
-| Actinomyces naeslundii            | AB618790              |                                            |
-| Actinomyces neuii                 | AM084229              | Actinomyces neuii subsp. anitratus         |
-| Actinomyces odontolyticus         | AB818950              |                                            |
-| Actinomyces turicensis            | X78720                |                                            |
-| Actinomyces urogenitalis          | ACFH01000038          | Actinomyces urogenitalis DSM 15434         |
-| Aerococcus christensenii          | Y17005                |                                            |
-| Aerococcus sanguinicola           | AJ276512              |                                            |
-| Aerococcus urinae                 | M77819                |                                            |
-| Alloscardovia omnicolens          | AM419460              |                                            |
-| Anaerococcus octavius             | Y07841                |                                            |
-| Bacillus idriensis                | AY904033              |                                            |
-| Bacillus infantis                 | AY904032              |                                            |
-| Bifidobacterium bifidum           | S83624                |                                            |
-| Bifidobacterium breve             | AB006658              |                                            |
-| Bifidobacterium longum            | AP010889              | Bifidobacterium longum subsp. infa…        |
-| Brevibacterium massiliense        | EU086793              | Brevibacterium ravenspurgense              |
-| Campylobacter ureolyticus         | ARGD01000016          | Campylobacter ureolyticus DSM 20703        |
-| Corynebacterium amycolatum        | X84244                |                                            |
-| Corynebacterium aurimucosum       | AJ309207              |                                            |
-| Corynebacterium coyleae           | X96497                |                                            |
-| Corynebacterium matruchotii       | ACSH02000003          | Corynebacterium matruchotii ATCC 1…        |
-| Corynebacterium pyruviciproducens | ATBY01000001          |                                            |
-| Corynebacterium riegelii          | Y14651                |                                            |
-| Corynebacterium sp.               | .                     | no type spec                               |
-| Corynebacterium tuscaniense       | AY677186              |                                            |
-| Dermabacter hominis               | X91034                |                                            |
-| Enterobacter asburiae             | AB004744              |                                            |
-| Enterobacter cloacae              | CP001918              | Enterobacter cloacae subsp. cloaca…        |
-| Enterococcus faecalis             | AB012212              |                                            |
-| Escherichia coli                  | EU014689              |                                            |
-| Facklamia hominis                 | AGZD01000007          | Facklamia hominis CCUG 36813               |
-| Facklamia ignava                  | AGZE01000005          | Facklamia ignava CCUG 37419                |
-| Gardnerella vaginalis             | M58744                | Gardnerella vaginalis ATCC 14018           |
-| Globicatella sanguinis            | AB680901              | Globicatella sanguinis                     |
-| Gordonia terrae                   | AB920570              |                                            |
-| Klebsiella pneumoniae             | X87276                |                                            |
-| Kocuria rhizophila                | Y16264                |                                            |
-| Kytococcus schroeteri             | AJ297722              |                                            |
-| Lactobacillus crispatus           | AB008206              |                                            |
-| Lactobacillus delbrueckii         | AB007908              |                                            |
-| Lactobacillus fermentum           | AJ575812              |                                            |
-| Lactobacillus gasseri             | AB008209              |                                            |
-| Lactobacillus iners               | HE573916              |                                            |
-| Lactobacillus jensenii            | AF243176              |                                            |
-| Lactobacillus johnsonii           | HE573915              |                                            |
-| Lactobacillus pontis              | X76329                |                                            |
-| Lactobacillus rhamnosus           | AB008211              |                                            |
-| Micrococcus luteus                | CP001628              | Micrococcus luteus NCTC 2665               |
-| Moraxella osloensis               | FR726160              |                                            |
-| Morganella morganii               | AJ301681              | Morganella morganii subsp. morganii        |
-| Neisseria macacae                 | HF558383              |                                            |
-| Neisseria perflava                | HF558366              |                                            |
-| Neisseria subflava                | AJ239291              |                                            |
-| Oligella urethralis               | AF133538              |                                            |
-| Propionibacterium acnes           | CP006032              | Propionibacterium acnes hdn-1 no type spec |
-| Propionibacterium avidum          | AGBA01000019          | as Cutibacterium avidum ATCC 25577         |
-| Proteus mirabilis                 | AJ301682              |                                            |
-| Pseudomonas aeruginosa            | HE978271              |                                            |
-| Rothia dentocariosa               | CP002280              | Rothia dentocariosa ATCC 17931             |
-| Rothia mucilaginosa               | X87758                |                                            |
-| Staphylococcus epidermidis        | AB681292              |                                            |
-| Staphylococcus hominis            | X66101                | Staphylococcus hominis subsp. homi… 1      |
-| Staphylococcus pettenkoferi       | AF322002              |                                            |
-| Staphylococcus saprophyticus      | AP008934              | Staphylococcus saprophyticus subsp…        |
-| Staphylococcus simulans           | D83373                |                                            |
-| Staphylococcus warneri            | L37603                |                                            |
-| Streptococcus agalactiae          | AB023574              |                                            |
-| Streptococcus anginosus           | AFIM01000033          |                                            |
-| Streptococcus equinus             | AB680295              |                                            |
-| Streptococcus gordonii            | AF003931              |                                            |
-| Streptococcus mitis               | AF003929              |                                            |
-| Streptococcus oralis              | ADMV01000001          |                                            |
-| Streptococcus parasanguinis       | AF003933              |                                            |
-| Streptococcus salivarius          | AY188352              | Streptococcus salivarius subsp. sa…        |
-| Streptococcus sanguinis           | AF003928              |                                            |
-| Trueperella bernardiae            | X79224                |                                            |
-| Varibaculum cambriense            | AJ428402              |                                            |
-| Veillonella parvula               | AB538437              |                                            |
 
-The files were downloaded and saved in folder
-arb-silva.de\_2019-11-10\_id739827. A copy of the file was made and
-renamed ktw\_16s\_type\_strains\_2019-11-10.
+| species |  type strain accession | notes|
+|-----|-----|---------|
+| Actinobaculum schaalii                | FJ960443 |as Actinotignum schaali|
+| Actinomyces naeslundii                | AB618790||
+| Actinomyces neuii                     | AM084229 |	Actinomyces neuii subsp. anitratus|
+| Actinomyces odontolyticus             | AB818950||
+| Actinomyces turicensis                | X78720||
+| Actinomyces urogenitalis              | ACFH01000038 |	Actinomyces urogenitalis DSM 15434|
+| Aerococcus christensenii              | Y17005||
+| Aerococcus sanguinicola               | AJ276512||
+| Aerococcus urinae                     | M77819||
+| Alloscardovia omnicolens              | AM419460||
+| Anaerococcus octavius                 | Y07841||
+| Bacillus idriensis                    | AY904033||
+| Bacillus infantis                     | AY904032||
+| Bifidobacterium bifidum               | S83624||
+| Bifidobacterium breve                 | AB006658||
+| Bifidobacterium longum                | AP010889| Bifidobacterium longum subsp. infa…|
+| Brevibacterium massiliense            | EU086793 	|Brevibacterium ravenspurgense|
+| Campylobacter ureolyticus             | ARGD01000016 |	Campylobacter ureolyticus DSM 20703|
+| Corynebacterium amycolatum            | X84244||
+| Corynebacterium aurimucosum           | AJ309207||
+| Corynebacterium coyleae               | X96497||
+| Corynebacterium matruchotii           | ACSH02000003 |	Corynebacterium matruchotii ATCC 1… | pintail was n/a|
+| Corynebacterium pyruviciproducens     | ATBY01000001||
+| Corynebacterium riegelii              | Y14651||
+| Corynebacterium sp.                   | .|no type spec|
+| Corynebacterium tuscaniense           | AY677186||
+| Dermabacter hominis                   | X91034||
+| Enterobacter asburiae                 | AB004744||
+| Enterobacter cloacae                  | CP001918 	|Enterobacter cloacae subsp. cloaca…|
+| Enterococcus faecalis                 | AB012212||
+| Escherichia coli                      | EU014689||
+| Facklamia hominis                     | AGZD01000007 	|Facklamia hominis CCUG 36813|pintail n/a
+| Facklamia ignava                      | AGZE01000005 |	Facklamia ignava CCUG 37419
+| Gardnerella vaginalis                 | M58744 |	Gardnerella vaginalis ATCC 14018|
+| Globicatella sanguinis                | AB680901 |	Globicatella sanguinis|
+| Gordonia terrae                       | AB920570||
+| Klebsiella pneumoniae                 | X87276||
+| Kocuria rhizophila                    | Y16264||
+| Kytococcus schroeteri                 | AJ297722||
+| Lactobacillus crispatus               | AB008206||
+| Lactobacillus delbrueckii             | AB007908||
+| Lactobacillus fermentum               | AJ575812||
+| Lactobacillus gasseri                 | AB008209||
+| Lactobacillus iners                   | HE573916||
+| Lactobacillus jensenii                | AF243176||
+| Lactobacillus johnsonii               | HE573915||
+| Lactobacillus pontis                  | X76329||
+| Lactobacillus rhamnosus               | AB008211||
+| Micrococcus luteus                    | CP001628 |	Micrococcus luteus NCTC 2665|
+| Moraxella osloensis                   | FR726160||
+| Morganella morganii                   | AJ301681 |	Morganella morganii subsp. morganii|
+| Neisseria macacae                     | HF558383|
+| Neisseria perflava                    | HF558366|
+| Neisseria subflava                    | AJ239291|
+| Oligella urethralis                   | AF133538|
+| Propionibacterium acnes               | CP006032 |	Propionibacterium acnes hdn-1  no type spec
+| Propionibacterium avidum              | AGBA01000019 |	as Cutibacterium avidum ATCC 25577|
+| Proteus mirabilis                     | AJ301682||
+| Pseudomonas aeruginosa                | HE978271||
+| Rothia dentocariosa                   | CP002280 |	Rothia dentocariosa ATCC 17931|
+| Rothia mucilaginosa                   | X87758||
+| Staphylococcus epidermidis            | AB681292||
+| Staphylococcus hominis                | X66101 |	Staphylococcus hominis subsp. homi… 	1|
+| Staphylococcus pettenkoferi           | AF322002||
+| Staphylococcus saprophyticus          | AP008934 |	Staphylococcus saprophyticus subsp… 	|
+| Staphylococcus simulans               | D83373||
+| Staphylococcus warneri                | L37603||
+| Streptococcus agalactiae              | AB023574||
+| Streptococcus anginosus               | AFIM01000033||
+| Streptococcus equinus                 | AB680295||
+| Streptococcus gordonii                | AF003931||
+| Streptococcus mitis                   | AF003929||
+| Streptococcus oralis                  | ADMV01000001||
+| Streptococcus parasanguinis           | AF003933||
+| Streptococcus salivarius              | AY188352 	|Streptococcus salivarius subsp. sa… 	|
+| Streptococcus sanguinis               | AF003928||
+| Trueperella bernardiae                | X79224||
+| Varibaculum cambriense                | AJ428402||
+| Veillonella parvula                   | AB538437||
+
+The files were downloaded and saved in folder arb-silva.de_2019-11-10_id739827. A copy of the file was made and renamed ktw_16s_type_strains_2019-11-10.
 
 # data prep
 
-T-Coffee requires that the FASTA description line only contains the ID.
-I wrote a script that selects only the accession numbers from the
-sequences and writes to a new file. The script is in
-/thesis/gather\_markers/ssu16s/bladder\_population/arb-silva.de\_2019-11-10\_id739827/cull\_downloads.py,
-so don’t look for it in /thesis\_git. The basic function is:
+T-Coffee requires that the FASTA description line only contains the ID. I wrote a script that selects only the accession numbers from the sequences and writes to a new file. The script is in /thesis/gather_markers/ssu16s/bladder_population/arb-silva.de_2019-11-10_id739827/cull_downloads.py, so don't look for it in /thesis_git. The basic function is:
 
-``` r
+```{r, eval=FALSE}
 with open("accessions.txt", 'r') as f:
     acc_info=f.readlines()
     
@@ -132,7 +165,7 @@ with open("ktw_16s_type_{}.fna".format(runtime), 'a') as o:
 
 Then ran it through tcoffee.
 
-``` shellsession
+```{shellsession, eval=FALSE}
 Microsoft Windows [Version 10.0.18362.476]
 (c) 2019 Microsoft Corporation. All rights reserved.
 
@@ -459,69 +492,68 @@ OUTPUT RESULTS
 
 The T-Coffee output was zipped up and downloaded.
 
+
 # split to vr
 
-Using the *E. coli* type strain EU014689.1.1541 for reference
-coordinates
+Using the _E. coli_ type strain EU014689.1.1541 for reference coordinates
 
-| variable region | *E. coli* start | *E. coli* stop |  |  |
-| --------------- | --------------- | -------------- |  |  |
-| V1              | 69              | 99             |  |  |
-| V2              | 137             | 242            |  |  |
-| V3              | 433             | 497            |  |  |
-| V4              | 576             | 682            |  |  |
-| V5              | 822             | 879            |  |  |
-| V6              | 986             | 1043           |  |  |
-| V7              | 1117            | 1173           |  |  |
-| V8              | 1243            | 1294           |  |  |
-| V9              | 1435            | 1465           |  |  |
+|variable region | _E. coli_ start | _E. coli_ stop |
+|---|---|---|---|---|
+| V1 | 69 | 99|
+| V2| 137| 242 |
+| V3| 433 |497 |
+| V4| 576| 682| 
+| V5| 822| 879 |
+| V6| 986| 1043|
+| V7| 1117| 1173 | 
+| V8| 1243| 1294 | 
+| V9| 1435| 1465 | 
 
 ##### published primers
 
-| paper             | name         | sequence                                   | direction       | E. coli pos | platform | notes                                                                           |
-| ----------------- | ------------ | ------------------------------------------ | --------------- | ----------- | -------- | ------------------------------------------------------------------------------- |
-| Komesu 2017       | A17F         | GTT TGA TCC TGG CTC AG                     | \(\rightarrow\) | 12          | MiSeq    | possible typo at pos 9                                                          |
-| Komesu 2017       | 515R         | TTA CCG CGG CMG CSG GCA                    | \(\leftarrow\)  | 534         | MiSeq    |                                                                                 |
-| Komesu 2017       | 515F         | GTG CCA GCT GCC GCG GTA ATA                | \(\rightarrow\) | 536         | MiSeq    |                                                                                 |
-| Komesu 2017       | 1114R        | GGG GTT GCG CTC GTT GC                     | \(\leftarrow\)  | 116         | MiSeq    |                                                                                 |
-| Bukin 2019        | 16S\_BV2f    | AGT GGC GGA CGG GTG AGT AA                 | \(\rightarrow\) | 102         | MiSeq    |                                                                                 |
-| Bukin 2019        | 16S\_BV3r    | …                                          | \(\leftarrow\)  | 497?        | MiSeq    | this sequence is exactly the same as BV2f, and isn’t a palindrome. Typo?        |
-| Bukin 2019        | MiCSQ\_343FL | TAT GGT AAT TGT CTC CTA CGG RRS GCA GCA G  | \(\rightarrow\) | 344         | MiSeq    | no matches to MSA, assumed numbers are position of *E. coli* 16S sequence\[^1\] |
-| Bukin 2019        | MiCSQ\_806R  | AGT CAG TCA GCC GGA CTA CNV GGG TWT CTA AT | \(\leftarrow\)  | 806         | MiSeq    | no matches to MSA, assumed numbers are position of *E. coli* 16S sequence       |
-| Caporaso 2011     | F515         | GTG CCA GCM GCC GCG GTA A                  | \(\rightarrow\) | 516         | pyro     |                                                                                 |
-| Caporaso 2011     | R806         | CCT GAT GHV CCC AWA GAT TA                 | \(\leftarrow\)  | 808         | pyro     |                                                                                 |
-| Graspeuntner 2018 | V3F          | CCT ACG GGA GGC AGC AG                     | \(\rightarrow\) | 342         | MiSeq    |                                                                                 |
-| Graspeuntner 2018 | V4R          | GGA CTA CHV GGG TWT CTA AT                 | \(\leftarrow\)  | 789         | MiSeq    |                                                                                 |
+| paper | name | sequence | direction | E. coli pos |platform| notes |
+|-----------|-------|--------|--------|----|----|--------------------|
+|Komesu 2017| A17F |GTT TGA TCC TGG CTC AG|$\rightarrow$|12|MiSeq| possible typo at pos 9 |
+|Komesu 2017 | 515R|TTA CCG CGG CMG CSG GCA|$\leftarrow$|534|MiSeq||
+|Komesu 2017 |515F| GTG CCA GCT GCC GCG GTA ATA|$\rightarrow$|536|MiSeq||
+|Komesu 2017 |1114R|GGG GTT GCG CTC GTT GC|$\leftarrow$|116|MiSeq||
+|Bukin 2019| 16S_BV2f|AGT GGC GGA CGG GTG AGT AA|$\rightarrow$|102|MiSeq||
+|Bukin 2019|16S_BV3r| ... |$\leftarrow$|497?|MiSeq|this sequence is exactly the same as BV2f, and isn't a palindrome. Typo? |
+|Bukin 2019|MiCSQ_343FL|TAT GGT AAT TGT CTC CTA CGG RRS GCA GCA G|$\rightarrow$|344|MiSeq|no matches to MSA, assumed numbers are position of _E. coli_ 16S sequence[^1]|
+|Bukin 2019|MiCSQ_806R|AGT CAG TCA GCC GGA CTA CNV GGG TWT CTA AT|$\leftarrow$|806|MiSeq|no matches to MSA, assumed numbers are position of _E. coli_ 16S sequence|
+|Caporaso 2011|F515 |GTG CCA GCM GCC GCG GTA A | $\rightarrow$|516 | pyro||
+|Caporaso 2011|R806 |CCT GAT GHV CCC AWA GAT TA | $\leftarrow$| 808| pyro||
+|Graspeuntner 2018|V3F|CCT ACG GGA GGC AGC AG|$\rightarrow$|342|MiSeq||
+|Graspeuntner 2018|V4R|GGA CTA CHV GGG TWT CTA AT|$\leftarrow$|789|MiSeq||
 
 ##### primers I designed
 
-| paper | name      | sequence                | direction       | E. coli pos | platform | notes |
-| ----- | --------- | ----------------------- | --------------- | ----------- | -------- | ----- |
-| me    | v3\_579F  | THT TSS RCA ATG GRS GVA | \(\rightarrow\) | 359         | MiSeq    |       |
-| me    | v3\_779R  | GKN SCR AGC STT RHY CGG | \(\leftarrow\)  | 536         | MiSeq    |       |
-| me    | v6\_1183F | CCG CCT GGG GAS TAC GVH | \(\rightarrow\) | 875         | MiSeq    |       |
-| me    | v6\_1410R | AGT CCC RYA ACG AGC GCA | \(\leftarrow\)  | 1083        | MiSeq    |       |
+| paper | name | sequence | direction | E. coli pos  |platform| notes |
+|-----------|-------|--------|--------|----|----|--------------------|
+|me | v3_579F|THT TSS RCA ATG GRS GVA|$\rightarrow$|359|MiSeq||
+|me | v3_779R|GKN SCR AGC STT RHY CGG|$\leftarrow$|536|MiSeq||
+|me | v6_1183F|CCG CCT GGG GAS TAC GVH|$\rightarrow$|875|MiSeq||
+|me |v6_1410R|AGT CCC RYA ACG AGC GCA|$\leftarrow$|1083|MiSeq||
 
 ### extraction
 
-Primers and the abbreviations I’m using.
+Primers and the abbreviations I'm using.
 
-| paper             | primer                   | abbreviation |
-| ----------------- | ------------------------ | ------------ |
-| Komesu 2017       | A17F-515R                | k17          |
-| Komesu 2017       | 515F-1114R               | k515         |
-| Bukin 2019        | 16S\_BV2f-16S\_BV3r      | bbv          |
-| Bukin 2019        | MiCSQ\_343FL-MiCSQ\_806R | b646         |
-| Caporaso 2011     | F515-R806                | cap          |
-| Graspeuntner 2018 | V3F-V4R                  | gras         |
-| me                | v6\_1183F-v6\_1410R      | v6           |
-| me                | v3\_579F-v3\_779R        | v3           |
+| paper | primer | abbreviation |
+|-----------|-------|--------|
+|Komesu 2017| A17F-515R|k17|
+|Komesu 2017 |515F-1114R|k515|
+|Bukin 2019| 16S_BV2f-16S_BV3r|bbv|
+|Bukin 2019|MiCSQ_343FL-MiCSQ_806R|b646|
+|Caporaso 2011|F515-R806|cap|
+|Graspeuntner 2018|V3F-V4R|gras|
+|me | v6_1183F-v6_1410R|v6|
+|me | v3_579F-v3_779R|v3|
 
-Each primer set coordinates were used to extract the subsequences from
-the multisequence
-alignment.
 
-``` shellsession
+Each primer set coordinates were used to extract the subsequences from the multisequence alignment. 
+
+```{shellsession, eval=FALSE}
 (base) C:\Users\Carter\Documents\thesis\thesis_git\split_to_vr\src_files>python extract_16s_vr.py -i ../../resources/ktw_type_16s_2019-11-25/aln/ktw_16s_type_2019-11-25_34.aln -o cap_tpstr -e 516,808
 writing to ../processed_data/extracted_16s_regions_2019-11-26/extracted_cap_tpstr_2019-11-26_1550.fna
 
@@ -551,23 +583,20 @@ writing to ../processed_data/extracted_16s_regions_2019-11-26/extracted_v6_tpstr
 
 ## blca
 
-I put all the BLCA commands for every database into a bash script. Run
-all at once.
+I put all the BLCA commands for every database into a bash script. Run all at once.
 
-Moved the extracted\_16s\_regions\_2019-11-26 dir and
-blca\_typestr\_alldb.bash to the Ubuntu side, ran it.
+Moved the extracted_16s_regions_2019-11-26 dir and blca_typestr_alldb.bash to the Ubuntu side, ran it.
 
-``` shellsession
+```{shellsession, eval=FALSE}
 buzz@costco-special-k0Mput3r:~/BLCA$ chmod +x blca_typestr_alldb.bash
 buzz@costco-special-k0Mput3r:~/BLCA$ ./blca_typestr_alldb.bash
 ```
 
-ran without
-errors
+ran without errors
 
 ### reformatting
 
-``` shellsession
+```{shellsession, eval=FALSE}
 (base) C:\Users\Carter\Documents\thesis\thesis_git\taxonomy\src_files>python blcaout_to_csv.py -i ../raw_data/blca_tpstr_2019-11-26
 writing to ../processed_files/formatted_outfiles_2019-11-26_2031
 writing to ../processed_files/formatted_outfiles_2019-11-26_2031/formatted_b646_tpstr_default_2019-11-26_2019-11-26_2031.csv
@@ -604,15 +633,13 @@ writing to ../processed_files/formatted_outfiles_2019-11-26_2031/formatted_v6_tp
 writing to ../processed_files/formatted_outfiles_2019-11-26_2031/formatted_v6_tpstr_silva_2019-11-26_2019-11-26_2031.csv
 ```
 
-Next I had to make a map file for the type strain accesion numbers and
-known taxonomy.
+Next I had to make a map file for the type strain accesion numbers and known taxonomy.
 
-### typo\!
+### typo!
 
-I just noticed a typo. `b646` should be `b343`. Leaving it for now, but
-beware.
+I just noticed a typo. `b646` should be `b343`. Leaving it for now, but beware.
 
-``` shellsession
+```{shellsession, eval=FALSE}
 (base) C:\Users\Carter\Documents\thesis\thesis_git\taxonomy\src_files>python map_id_tax.py -h
 usage: map_id_tax.py [-h] [--infile INFILE] [--outfile OUTFILE] [--verbose]
 
@@ -642,11 +669,7 @@ This script doesnt have any other dependencies besides biopython
 (base) C:\Users\Carter\Documents\thesis\thesis_git\taxonomy\src_files>python map_id_tax.py -i ../../resources/ktw_16s_type_2019-11-25_34.fna -o type_strains_map
 ```
 
-There were a couple lines where the script didn’t pull out the names
-correctly, like `X96497.1.1483,Corynebacterium 1;Corynebacterium
-coyleae` so cleaned that up by hand. Then ran through the synonyms. I
-would like to say that nothing will happen, because I checked for
-synonyms when I donwnloaded the type strains, but we’ll see.
+There were a couple lines where the script didn't pull out the names correctly, like `X96497.1.1483,Corynebacterium 1;Corynebacterium coyleae` so cleaned that up by hand. Then ran through the synonyms. I would like to say that nothing will happen, because I checked for synonyms when I donwnloaded the type strains, but we'll see.
 
 ## naive bayes
 
@@ -654,41 +677,34 @@ fill in here
 
 # synonyms
 
-`validate_match.py` compares the results of the taxonomy assigned by a
-classifier to the known taxonomy held in a map file.
+`validate_match.py` compares the results of the taxonomy assigned by a classifier to the known taxonomy held in a map file.
 
 ## DSMZ
 
-Prokaryotic synonyms were downloaded from the [Prokaryotic Nomenclature
-Up-to-Date
-website](https://www.dsmz.de/services/online-tools/prokaryotic-nomenclature-up-to-date/downloads)
-run by the DSMZ-German Collection of Microorganisms and Cell Cultures,
-GmbH. If the synonym names are already the same, it’s because the DSMZ
-included information down to the strain level. Strains are out of scope,
-so entries like *Enterobacter cloacae cloacae* and *Enterobacter cloacae
-dissolvens* are considered synonyms of *Enterobacter cloacae*.
-Misspellings that don’t map to known synonyms are assigned as a
-mismatch. I’ll fix that later, but know that unless you’re typing your
-own taxonomy into fasta records, the chance of misspellings are low.
+Prokaryotic synonyms were downloaded from the [Prokaryotic Nomenclature Up-to-Date website](https://www.dsmz.de/services/online-tools/prokaryotic-nomenclature-up-to-date/downloads) run by the DSMZ-German Collection of Microorganisms and Cell Cultures, GmbH. If the synonym names are already the same, it's because the DSMZ included information down to the strain level. Strains are out of scope, so entries like _Enterobacter cloacae cloacae_ and _Enterobacter cloacae dissolvens_ are considered synonyms of _Enterobacter cloacae_. Misspellings that don't map to known synonyms are assigned as a mismatch. I'll fix that later, but know that unless you're typing your own taxonomy into fasta records, the chance of misspellings are low.
 
 ## in general
 
-Any genus or species taxon labled as “unidentified” or “uncultured” is
-designated as “unavailable”. “Unclassified” is reserved for when the
-classification algo thinks there’s no match for the record.
-“Unavailable” just means there’s no information for that record.
+Any genus or species taxon labled as "unidentified" or "uncultured" is designated as "unavailable". "Unclassified" is reserved for when the classification algo thinks there's no match for the record. "Unavailable" just means there's no information for that record.
 
-Input is the formatted csv file as written by the python script
-‘blcaout\_to\_csv.py’
+Input is the formatted csv file as written by the python script 'blcaout_to_csv.py'
 
-    id,taxon,rank,confidence
-    CP011325.22226.23780,Bacteria,domain,100.0
+```
+id,taxon,rank,confidence
+CP011325.22226.23780,Bacteria,domain,100.0
+```
 
-the –map\_file option takes a path to a file that can be used to map
-accession numbers to taxonomy by newick\_tools.inhouse\_to\_species().
-See below for the list of some existing map files. run the script like
-this:
+the --map_file option takes a path to a file that can be used to map accession numbers to taxonomy by newick_tools.inhouse_to_species(). See below for the list of some existing map files. 
+run the script like this:
 
-    >python validate_match.py -i path/to/formatted/assigned_taxonomy_file.csv -m path/to/map/file
+```
+>python validate_match.py -i path/to/formatted/assigned_taxonomy_file.csv -m path/to/map/file
+```
 
 # evaluations
+
+
+
+
+
+
