--- a/resources/md_files/pipeline_summary.Rmd
+++ b/resources/md_files/pipeline_summary.Rmd
@@ -52,7 +52,7 @@ library(votesys)
 
 I'm using this file to generate all md files for the github readme pages.
 
-![](sm_overall_activity.png)
+![](resources/md_files/sm_overall_activity.png)
 
 # Data download
 
