new files, new readmes

--- a/resources/md_files/homepage_readme.Rmd
+++ b/resources/md_files/homepage_readme.Rmd
@@ -55,10 +55,10 @@ The second part of the study was to validate one of the classification schemes b
 
 This repository contains the coding resources that were used in producing the results of the thesis (manuscript?) divided into 5 sections.
 
- * gathering the sequences used in the study
- * extracting the predicted subsequences using primer annealing sites as coordinates (targeted amplicons)
- * identification of the targeted amplicons using all classification schemes
- * evaluation of the results
+ * [gathering the sequences used in the study]()
+ * [extracting the predicted subsequences using primer annealing sites as coordinates (targeted amplicons)]()
+ * [identification of the targeted amplicons using all classification schemes]()
+ * [evaluation of the results]()
  
 The general workflow is illustrated below
 
