--- a/resources/public_readmes/handle_newick/readme.Rmd
+++ b/resources/public_readmes/handle_newick/readme.Rmd
@@ -9,13 +9,8 @@ header-includes:
    - \usepackage[T1]{fontenc}
    
 output: 
-  html_document:
-      toc: true
-      toc_depth: 4
-      toc_float: true
-      theme: readable
-      highlight: tango
-      code_folding: hide
+  md_document:
+    variant: gfm
 
 ---
 ```{r, eval=FALSE, echo=FALSE}
@@ -49,5 +44,9 @@ knitr::opts_chunk$set(tidy = FALSE, warning = FALSE, message = FALSE, max.print 
 library(tidyverse)
 
 ```
+
+# Entrenched code
+
+Many of the other scripts used functions defined for a part of the project that got abandoned. Since the module links are entrenched in all the other scripts, this directory has to be included. There's nothing else this directory does.
 
 
