--- a/top_level/readme.Rmd
+++ b/top_level/readme.Rmd
@@ -107,7 +107,7 @@ sections.
 
 The general workflow is illustrated below
 
-![](resources/md_files/sm_only16s_activity.png)
+![](../resources/md_files/vsm_only16s_activity.png)
 
 
 
