--- a/resources/public_readmes/split_to_vr/split_readme.Rmd
+++ b/resources/public_readmes/split_to_vr/split_readme.Rmd
@@ -207,126 +207,7 @@ The MSA contains the 16S rRNA sequence of the _E. coli_ type strain EU014689, an
 |this project | v6_1183F|CCG CCT GGG GAS TAC GVH|forward|875| 892 |MiSeq||
 |this project |v6_1410R|AGT CCC RYA ACG AGC GCA|reverse|1083| 1203 |MiSeq||
 
-
-```{r, fig.height=4, fig.width=8, echo=FALSE}
-s16_70 <- read_tsv("../../../resources/specific_windows_weighted_08_03_1426/ktw_16s_w70.csv", col_names = FALSE)
-
-adj <- 35
-
-vstart <- c(78,191,528,675,925,1093,1237,1369,1566)
-vstop <- c(151,333,596,783,986,1163,1297,1424,1606)
-
-pstart <- c(19,635,154,435,616,434,452,982)
-pend <- c(633,1234,596,909,911,892,635,1203)
-rank_pos <- c(.1, .2, .3, .4, .5, .6, .7, .8)
-
-vr_pos <- .85
-
-swa_plot <- ggplot(s16_70, aes(x=X1, y=X2)) +
-    geom_rect(xmin=vstart[1]-adj, xmax=vstop[1]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[2]-adj, xmax=vstop[2]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[3]-adj, xmax=vstop[3]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[4]-adj, xmax=vstop[4]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[5]-adj, xmax=vstop[5]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[6]-adj, xmax=vstop[6]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[7]-adj, xmax=vstop[7]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[8]-adj, xmax=vstop[8]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[9]-adj, xmax=vstop[9]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  annotate("text", x = 80, y = .95, label = "V1", color="gray40", size=5) +
-  annotate("text", x = 230, y = .95, label = "V2", color="gray40", size=5) +
-  annotate("text", x = 530, y = .95, label = "V3", color="gray40", size=5) +
-  annotate("text", x = 700, y = .95, label = "V4", color="gray40", size=5) +
-  annotate("text", x = 920, y = .95, label = "V5", color="gray40", size=5) +
-  annotate("text", x = 1100, y = .95, label = "V6", color="gray40", size=5) +
-  annotate("text", x = 1230, y = .95, label = "V7", color="gray40", size=5) +
-  annotate("text", x = 1360, y = .95, label = "V8", color="gray40", size=5) +
-  annotate("text", x = 1550, y = .95, label = "V9", color="gray40", size=5) +
-  geom_line(size=1.1) +
-  theme_classic() +
-  scale_x_continuous(breaks=seq(0,1700,400), limits = c(0,1700))+ 
-  scale_y_continuous(breaks=seq(0,1,.2), limits = c(.001,1))+ 
-  theme(plot.title = element_text(size=20), plot.subtitle = element_text(size=14), axis.title.y= element_text(size=16), axis.title.x = element_text(size=16), axis.text = element_text(size=14), legend.title = element_text(size=14),legend.text = element_text(size=14), strip.text.x = element_text(size = 14), strip.text.y = element_text(size = 14)) +
-  labs(x="Position in alignment", y="Entropy")
-
-
-amp_plot <- ggplot(s16_70, aes(x=X1, y=X2)) +
-  geom_rect(xmin=vstart[1]-adj, xmax=vstop[1]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[2]-adj, xmax=vstop[2]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[3]-adj, xmax=vstop[3]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[4]-adj, xmax=vstop[4]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[5]-adj, xmax=vstop[5]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[6]-adj, xmax=vstop[6]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[7]-adj, xmax=vstop[7]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[8]-adj, xmax=vstop[8]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-  geom_rect(xmin=vstart[9]-adj, xmax=vstop[9]-adj, ymin=-1, ymax=Inf, fill="ivory3") +
-    annotate("text", x = 80, y = vr_pos, label = "V1", color="gray40", size=5) +
-  annotate("text", x = 230, y = vr_pos, label = "V2", color="gray40", size=5) +
-  annotate("text", x = 530, y = vr_pos, label = "V3", color="gray40", size=5) +
-  annotate("text", x = 700, y = vr_pos, label = "V4", color="gray40", size=5) +
-  annotate("text", x = 920, y = vr_pos, label = "V5", color="gray40", size=5) +
-  annotate("text", x = 1100, y = vr_pos, label = "V6", color="gray40", size=5) +
-  annotate("text", x = 1230, y = vr_pos, label = "V7", color="gray40", size=5) +
-  annotate("text", x = 1360, y = vr_pos, label = "V8", color="gray40", size=5) +
-  annotate("text", x = 1550, y = vr_pos, label = "V9", color="gray40", size=5) +
-   #bv
-  geom_segment(aes(x = pstart[3], y = rank_pos[2], xend = pend[3], yend = rank_pos[2]), color = wes_palette("Darjeeling2")[5], size=2) +
-  #geom_text(aes(label="16S_BV2f-16S_BV3r", x=1000, y=rank_pos[2]), size=4) +
-  #geom_text(aes(label="Bukin 2019", x=950, y=rank_pos[2]), size=5) +
-  geom_text(aes(label="V2-V3", x=700, y=rank_pos[2]), size=5) +
-  
-  #gras
-  geom_segment(aes(x = pstart[6], y = rank_pos[5], xend = pend[6], yend = rank_pos[5]), color = wes_palette("Darjeeling2")[5], size=2) +
-  #geom_text(aes(label="V3F-V4R", x=1200, y=rank_pos[5]), size=4) +
-  #geom_text(aes(label="Graspeuntner 2018", x=1350, y=rank_pos[5]), size=5) +
-  geom_text(aes(label="V3-V4", x=1000, y=rank_pos[5]), size=5) +
-  
-  #v3
-  geom_segment(aes(x = pstart[7], y = rank_pos[3], xend = pend[7], yend = rank_pos[3]), color = wes_palette("Darjeeling2")[5], size=2) +
-  #geom_text(aes(label="V3_579F-V3_779R", x=1070, y=rank_pos[3]), size=4) +
-  geom_text(aes(label="V3", x=700, y=rank_pos[3]), size=5) +
-  
-  #cap
-  geom_segment(aes(x = pstart[5], y = rank_pos[4], xend = pend[5], yend = rank_pos[4]), color = wes_palette("Darjeeling2")[5], size=2) +
-  #geom_text(aes(label="F515-R806", x=1250, y=rank_pos[4]), size=4) +
-  #geom_text(aes(label="Caporaso 2011", x=1300, y=rank_pos[4]), size=5) +
-  geom_text(aes(label="V4", x=950, y=rank_pos[4]), size=5) +
-  
-  #k17
-  geom_segment(aes(x = pstart[1], y = rank_pos[1], xend = pend[1], yend = rank_pos[1]), color = wes_palette("Darjeeling2")[5], size=2) +
-  #geom_text(aes(label="A17F-515R", x=900, y=rank_pos[1]), size=4) +
-  #geom_text(aes(label="Komesu 2017", x=1000, y=rank_pos[1]), size=5) +
-  geom_text(aes(label="V1-V3", x=750, y=rank_pos[1]), size=5) +
-  
-  #b646
-  #geom_segment(aes(x = pstart[4], y = rank_pos[6], xend = pend[4], yend = rank_pos[6]), color = wes_palette("Darjeeling2")[5], size=2) +
-  #geom_text(aes(label="MiCSQ_343FL-MiCSQ_806R", x=1400, y=rank_pos[6]), size=4) +
-  #geom_text(aes(label="Bukin 2019", x=1250, y=rank_pos[6]), size=5) +
-  #geom_text(aes(label="V3-V5", x=1000, y=rank_pos[6]), size=5) +
-  
-  #k515
-  geom_segment(aes(x = pstart[2], y = rank_pos[6], xend = pend[2], yend = rank_pos[6]), color = wes_palette("Darjeeling2")[5], size=2) +
-  #geom_text(aes(label="515F-1114R", x=1600, y=rank_pos[7]), size=4) +
-  #geom_text(aes(label="Komesu 2017", x=1650, y=rank_pos[7]), size=5) +
-  geom_text(aes(label="V4-V6", x=1350, y=rank_pos[6]), size=5) +
-  
-  #v6
-  geom_segment(aes(x = pstart[8], y = rank_pos[7], xend = pend[8], yend = rank_pos[7]), color = wes_palette("Darjeeling2")[5], size=2) +
-  #geom_text(aes(label="V6_1183F-V6_1410R", x=1700, y=rank_pos[8]), size=4) +
-  geom_text(aes(label="V6", x=1280, y=rank_pos[7]), size=5) +
-  
-  theme_classic() +
-  theme(plot.title = element_text(size=20), plot.subtitle = element_text(size=14), axis.title.y= element_text(size=16), axis.title.x = element_blank(), axis.text = element_text(size=14), legend.title = element_text(size=14),legend.text = element_text(size=14), strip.text.x = element_text(size = 14), strip.text.y = element_text(size = 14)) +
-  theme(axis.ticks.y = element_blank()) +
-  theme(axis.text.y = element_blank()) +
-  #, axis.text.x=element_text(angle = 30, hjust = 1)) +
-  scale_x_continuous(breaks=seq(0,1600,200)) +
-  #labs(title="Position of amplicons on the 16S rRNA gene", x="Position in 16S gene sequence", y="Targeted amplicons")
-  labs(x="Position in 16S gene sequence", y="Targeted amplicons")
-```
-
-```{r, fig.height=8, fig.width=8}
-amp_plot / swa_plot + plot_annotation(tag_levels = 'A')
-```
+![](../../../resources/md_files/amp_swa.png)
 
 
 The python script `src_files/extract_16s_vr.py` is used to extract the predicted amplicons from the MSA based on the 5' and 3' annealing sites of the primer set that would be used in PCR. In the example below, the script takes three arguments: the path to the MSA (ktw_type_16s_2019-11-25/aln/ktw_16s_type_2019-11-25_34.aln), the name of the file that will be written (cap_tpstr), and the start and stop coordinates (516,808). The output is a multi-record FASTA file of the predicted amplicon sequence, for each species in the MSA.
